# terminal-markup

./: LICENSE  README.md  pyproject.toml
terminal_markup/: __init__.py  cli.py  converter.py  escape_codes.py  escape_sequence.py  markup.py  markup_converter.py  renderer.py
terminal_markup/utils/: color.py  constant.py  enum.py
terml/: __init__.py  ansi_colors.py  cli.py  formatter.py  parser.py  term.py
