[tool.poetry]
name = "terminal-markup"
version = "0.2.2"
description = "Converts Markup to Terminal ANSI Escape Codes"
authors = ["Sergey M"]
repository = "https://github.com/s3rgeym/terminal-markup"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
terminal-markup = 'terminal_markup.cli:main'
